# SimpleCoin

./: CMakeLists.txt  docker-compose.yml
docker/: Dockerfile
src/: config.hpp  digital_identity.cpp  digital_identity.hpp  digital_identity_example  main.cpp  main.hpp  p2p.hpp  peer.hpp  server.hpp  utils.hpp  wallet.cpp
src/bad/: main.cpp  main.hpp
src/blockchain/: block.hpp  chain.hpp  merkle.hpp  transaction.hpp
src/client/: main.cpp  main.hpp  wallet.cpp  wallet.hpp
src/miner/: main.cpp  main.hpp
src/network/: client.hpp  node.hpp  p2p.hpp  protocol.hpp
src/transaction/: coinbase_transaction.json  transaction.hpp  unfair_transaction.json
tests/: merkle_test.cpp
